bug squashinggit add .git add .git add .!

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -305,7 +305,7 @@ color: #00CED1;
 
 .col-xs-12-col-sm-9{
   margin-top: 260px;
-
+}
 
 .navbtn {
   display: inline;
@@ -319,16 +319,12 @@ color: #00CED1;
 
 }
 
+.searchnavelements {
+    float: right;
+    position: relative;
+    bottom: 35px;
+}
 
-// #like-change{
-// padding-right: 0.5em;
-// display: none;
-// float: right;
-// color: #00CED1;
-// }
-//
-// #like{
-//   padding-right: 0.5em;
-//   float: right;
-//   color: black;
-// }
+
+
+
